write flavors details view

--- a/Sweetshop/Views/Flavors/Delete.cshtml
+++ b/Sweetshop/Views/Flavors/Delete.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-@model SweetShop.Models.Category
+@model SweetShop.Models.Flavor
 
 <h2>Confirm delete of this flavor?</h2>
 
