--- a/Sweetshop/Views/Home/Index.cshtml
+++ b/Sweetshop/Views/Home/Index.cshtml
@@ -1,8 +1,48 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+  Layout = "_Layout";
 }
+@using SweetShop.Models
+@model List<SweetShop.Models.Treat>
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h2>Welcome to Pierre's Tasty Treats!</h2>
+
+    @if (Model.Count == 0 && ViewBag.Flavors.Count == 0)
+    {
+        <p>There are currently not any flavors or treats in the system!</p>
+    }
+    else 
+    {
+        @if (Model.Count != 0)
+        {
+            <h4>Today's treats:</h4>
+            <ul>
+            @foreach (Treat treat in Model)
+            {
+                <li>@Html.ActionLink($"{treat.Name}", "Details", "Treats", new { id = treat.TreatId }): @treat.Description</li>
+            }
+            </ul>
+        }
+        else 
+        {
+            <h4>Today's treats:</h4>
+            <p>No treats currently availiable...</p>
+        }
+
+        @if (ViewBag.Flavors.Count != 0)
+        {
+            <h4>Flavors</h4>
+            <ul>
+                @foreach (Flavor flavor in ViewBag.Flavors)
+                {
+                    <li><a href='@Url.Action("Details", "Flavors", new { id = flavor.FlavorId})'>@flavor.Name</a></li>
+                }
+            </ul>
+        }
+        else
+        {
+            <h4>Flavors</h4>
+            <p>No flavors have been created!</p>
+        }
+    }
 </div>
