add register, login/logoff to nav bar

--- a/Sweetshop/Views/Shared/_Layout.cshtml
+++ b/Sweetshop/Views/Shared/_Layout.cshtml
@@ -22,9 +22,24 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                        @if (!User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" href='@Url.Action("Register", "Account")'>Register</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" href='@Url.Action("Login", "Account")'>Login</a>
+                            </li>
+                        }
+                        else 
+                        {
+                            <li class="nav-item">
+                            @using (Html.BeginForm("LogOff", "Account"))
+                                {
+                                    <a class="nav-linktext-dark"><button type="submit" class="btn btn-block dropdown-item text-danger">Log out</button></a>
+                                }
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
