--- a/Sweetshop/Views/Flavors/Details.cshtml
+++ b/Sweetshop/Views/Flavors/Details.cshtml
@@ -23,6 +23,21 @@ else
   </ul>
 }
 
+@if (User.Identity.IsAuthenticated)
+    {
+      @using (Html.BeginForm("AddTreat", "Flavors"))
+      {
+        @Html.HiddenFor(model => model.FlavorId)
+
+        <div>
+          @Html.Label("Add treat")
+          @Html.DropDownList("TreatId", ViewBag.TreatId, "Add selection", new { @class = "form-control"})
+        </div>
+
+        <input type="submit" value="Add treat" />
+      }
+    }
+
 <p>@Html.ActionLink("Back to flavors", "Index")</p>
 <p>@Html.ActionLink("Edit Flavor", "Edit", new { id = Model.FlavorId })</p>
 <p>@Html.ActionLink("Delete Flavor", "Delete", new { id = Model.FlavorId })</p>
