--- a/Sweetshop/Views/Flavors/Details.cshtml
+++ b/Sweetshop/Views/Flavors/Details.cshtml
@@ -18,7 +18,7 @@ else
   <ul>
   @foreach(var join in Model.JoinEntities)
   {
-    <li>@join.Item.Name</li>
+    <li>@join.Treat.Name</li>
   }
   </ul>
 }
