--- a/Sweetshop/Views/Treats/Index.cshtml
+++ b/Sweetshop/Views/Treats/Index.cshtml
@@ -11,9 +11,9 @@
 @if (Model.Any())
 {
   <ul>
-    @foreach (Flavor flavor in Model)
+    @foreach (Treat treat in Model)
     {
-      <li>@Html.ActionLink($"{flavor.Name}", "Details", new { id = flavor.FlavorId })</li>
+      <li>@Html.ActionLink($"{treat.Name}", "Details", new { id = treat.TreatId })</li>
     }
   </ul>
 } 
