--- a/Sweetshop/Views/Home/Index.cshtml
+++ b/Sweetshop/Views/Home/Index.cshtml
@@ -2,34 +2,31 @@
   Layout = "_Layout";
 }
 @using SweetShop.Models
-@model List<SweetShop.Models.Treat>
+@model IEnumerable<SweetShop.Models.Treat>
 
 <div class="text-center">
     <h2>Welcome to Pierre's Tasty Treats!</h2>
-
-    @if (Model.Count == 0 && ViewBag.Flavors.Count == 0)
-    {
-        <p>There are currently not any flavors or treats in the system!</p>
-}
-    else 
-    {
-        @if (Model.Count != 0)
+    <!-- && ViewBag.Flavors.Count -->
+    <div id="homeTreatsList">
+        @if (Model.Any())
         {
-            <h4>Today's treats:</h4>
-            <ul>
-            @foreach (Treat treat in Model)
-            {
-                <li>@Html.ActionLink($"{treat.Name}", "Details", "Treats", new { id = treat.TreatId }): @treat.Description</li>
-            }
-            </ul>
+            <h4>Today's treats: </h4>
+                <ul>
+                @foreach (Treat treat in Model)
+                {
+                    <li>@Html.ActionLink($"{treat.Name}", "Details", "Treats", new { id = treat.TreatId }): @treat.Description</li>
+                }
+                </ul>
         }
         else 
         {
             <h4>Today's treats:</h4>
             <p>No treats currently availiable...</p>
         }
+    </div>
 
-        @if (ViewBag.Flavors.Count != 0)
+    <div id="homeFlavorsList">
+        @if (ViewBag.Flavors.Count != 0 )
         {
             <h4>Flavors</h4>
             <ul>
@@ -44,5 +41,6 @@
             <h4>Flavors</h4>
             <p>No flavors have been created!</p>
         }
-    }
+    </div>
+    
 </div>
