another round of troubleshooting, MVP works

--- a/Sweetshop/Views/Flavors/Index.cshtml
+++ b/Sweetshop/Views/Flavors/Index.cshtml
@@ -18,5 +18,8 @@
   }
 </ul>
 
-<p>@Html.ActionLink("Add new flavor", "Create")</p>
+@if (User.Identity.IsAuthenticated)
+{
+  <p>@Html.ActionLink("Add new flavor", "Create")</p>
+}
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
