--- a/Sweetshop/Views/Account/Index.cshtml
+++ b/Sweetshop/Views/Account/Index.cshtml
@@ -4,19 +4,23 @@
 
 @using System.Security.Claims
 
-<h2>Authentication with Identity</h2>
-<hr />
-@if (User.Identity.IsAuthenticated)
-{
-    <p>Hello @User.Identity.Name!</p>
-    @using (Html.BeginForm("LogOff", "Account"))
+<div class="viewContainer">
+    <h2>Authentication with Identity</h2>
+    <hr />
+    @if (User.Identity.IsAuthenticated)
     {
-        <input type="submit" class="btn btn-default" value="Log out" />
+        <p>Hello @User.Identity.Name!</p>
+        @using (Html.BeginForm("LogOff", "Account"))
+        {
+            <input type="submit" class="btn btn-primary btn-large" value="Log out" />
+        }
     }
-}
-else
-{
-    <p>@Html.ActionLink("Register", "Register")</p>
-    <p>@Html.ActionLink("Log in", "Login")</p>
-}
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
+    else
+    {
+        @Html.ActionLink("Register", "Register", null, null, new { @class = "btn btn-primary btn-large" })
+
+        @Html.ActionLink("Login", "Login", null, null, new { @class = "btn btn-primary btn-large" })
+    }
+
+    @Html.ActionLink("Home", "Index", "Home", null, new { @class = "btn btn-primary btn-large" })
+</div>
