--- a/Sweetshop/Views/Account/Login.cshtml
+++ b/Sweetshop/Views/Account/Login.cshtml
@@ -5,16 +5,17 @@
 @using SweetShop.ViewModels
 
 @model LoginViewModel
+<div class="viewContainer">
+  <h2>Log in to your sweet account!</h2>
+  <hr />
+  @using (Html.BeginForm())
+  {
+      <span class="form-control">@Html.LabelFor(m => m.UserName)
+      @Html.TextBoxFor(m => m.UserName)</span>
 
-<h2>Log in to your sweet account!</h2>
-<hr />
-@using (Html.BeginForm())
-{
-    @Html.LabelFor(m => m.UserName)
-    @Html.TextBoxFor(m => m.UserName)
+      <span class="form-control">@Html.LabelFor(m => m.Password)
+      @Html.PasswordFor(m => m.Password)</span>
 
-    @Html.LabelFor(m => m.Password)
-    @Html.PasswordFor(m => m.Password)
-
-    <input type="submit" value="Log in" class="btn btn-default" />
-}
+      <input type="submit" value="Log in" class="btn btn-primary btn-large" />
+  }
+</div>
