--- a/Sweetshop/Views/Shared/_Layout.cshtml
+++ b/Sweetshop/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                             <li class="nav-item">
                             @using (Html.BeginForm("LogOff", "Account"))
                                 {
-                                    <a class="nav-linktext-dark"><button type="submit" class="btn btn-block dropdown-item text-danger">Log out</button></a>
+                                    <a class="nav-linktext-dark"><button type="submit" class="dropdown-item text-dark">Log out</button></a>
                                 }
                             </li>
                         }
