--- a/Sweetshop/Views/Flavors/Create.cshtml
+++ b/Sweetshop/Views/Flavors/Create.cshtml
@@ -4,11 +4,14 @@
 
 @model SweetShop.Models.Flavor
 
-<h4>Add a new flavor</h4>
-@using (Html.BeginForm())
-{
-  @Html.LabelFor(model => model.Name)
-  @Html.TextBoxFor(model => model.Name)
-  <input type="submit" value="Add new Flavor" />
-}
-<p>@Html.ActionLink("Show all flavors", "Index")</p>
+<div class="viewContainer">
+  <h4>Add a new flavor</h4>
+  @using (Html.BeginForm())
+  {
+    <span class="form-control">@Html.LabelFor(model => model.Name)
+    @Html.TextBoxFor(model => model.Name)</span>
+
+    <input type="submit" value="Add new Flavor" class="btn btn-primary btn-large" />
+  }
+  <p>@Html.ActionLink("Show all flavors", "Index", null, null, new { @class = "btn btn-primary btn-large" })</p>
+</div>
