--- a/Sweetshop/Views/Flavors/Index.cshtml
+++ b/Sweetshop/Views/Flavors/Index.cshtml
@@ -4,22 +4,24 @@
 
 @using SweetShop.Models;
 
-<h1>Flavors</h1>
+<div class="viewContainer">
+  <h1>Flavors</h1>
 
-@if (@Model.Count == 0)
-{
-  <h3>No flavors have been created yet!</h3>
-} 
-
-<ul>
-  @foreach(Flavor flavor in Model)
+  @if (@Model.Count == 0)
   {
-    <li>@Html.ActionLink($"{flavor.Name}", "Details", new { id = flavor.FlavorId })</li>
-  }
-</ul>
+    <h3>No flavors have been created yet!</h3>
+  } 
 
-@if (User.Identity.IsAuthenticated)
-{
-  <p>@Html.ActionLink("Add new flavor", "Create")</p>
-}
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
+  <ul>
+    @foreach(Flavor flavor in Model)
+    {
+      <li>@Html.ActionLink($"{flavor.Name}", "Details", new { id = flavor.FlavorId }, new { @class = "btn btn-light btn-sm"})</li>
+    }
+  </ul>
+
+  @if (User.Identity.IsAuthenticated)
+  {
+    <p>@Html.ActionLink("Add new flavor", "Create", null, null, new { @class = "btn btn-primary btn-large" })</p>
+  }
+  <p>@Html.ActionLink("Home", "Index", "Home", null, new { @class = "btn btn-primary btn-large" })</p>
+</div>
