--- a/Sweetshop/Views/Treats/Create.cshtml
+++ b/Sweetshop/Views/Treats/Create.cshtml
@@ -4,18 +4,20 @@
 
 @model SweetShop.Models.Treat
 
-<h4>Create a new treat</h4>
+<div class="viewContainer">
+  <h4>Create a new treat</h4>
 
-@using (Html.BeginForm())
-{
-  @Html.LabelFor(model => model.Name)
-  @Html.TextBoxFor(model => model.Name)
-  @Html.LabelFor(model => model.Description)
-  @Html.TextBoxFor(model => model.Description)
+  @using (Html.BeginForm())
+  {
+    <span class="form-control">@Html.LabelFor(model => model.Name)
+    @Html.TextBoxFor(model => model.Name)</span>
+    <span class="form-control">@Html.LabelFor(model => model.Description)
+    @Html.TextBoxFor(model => model.Description)</span>
 
-  @Html.Label("Select flavor")
-  @Html.DropDownList("FlavorId", null, "No category")
+    <span class="form-control">@Html.Label("Select flavor")
+    @Html.DropDownList("FlavorId", null, "No category")</span>
 
-  <input type="submit" value="Add new treat" class="btn btn-default" />
-}
-<p>@Html.ActionLink("Show all treats", "Index")</p>
+    <input type="submit" value="Add new treat" class="btn btn-primary btn-large" />
+  }
+  <p>@Html.ActionLink("Show all treats", "Index", null, null, new { @class = "btn btn-primary btn-large" })</p>
+</div>
