--- a/Sweetshop/Views/Treats/Index.cshtml
+++ b/Sweetshop/Views/Treats/Index.cshtml
@@ -6,25 +6,27 @@
 @using System.Security.Claims
 @model IEnumerable<SweetShop.Models.Treat>
 
-<h1>Welcome @User.Identity.Name</h1>
+<div class="viewContainer">
+  <h1>Welcome @User.Identity.Name</h1>
 
-@if (Model.Any())
-{
-  <ul>
-    @foreach (Treat treat in Model)
-    {
-      <li>@Html.ActionLink($"{treat.Name}", "Details", new { id = treat.TreatId })</li>
-    }
-  </ul>
-} 
-else
-{
-  <h3>No treats have been added yet!</h3>
-}
+  @if (Model.Any())
+  {
+    <ul>
+      @foreach (Treat treat in Model)
+      {
+        <li>@Html.ActionLink($"{treat.Name}", "Details", new { id = treat.TreatId }, new { @class = "btn btn-light btn-sm"})</li>
+      }
+    </ul>
+  } 
+  else
+  {
+    <h3>No treats have been added yet!</h3>
+  }
 
-@*Wrapped the 'Add New Item' ActionLink in an if statement to only show the link if the user is authenticated*@
-@if (User.Identity.IsAuthenticated)
-{
-  <p>@Html.ActionLink("Add new treat", "Create")</p>
-}
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
+  @*Wrapped the 'Add New Item' ActionLink in an if statement to only show the link if the user is authenticated*@
+  @if (User.Identity.IsAuthenticated)
+  {
+    <p>@Html.ActionLink("Add new treat", "Create", null, null, new { @class = "btn btn-primary btn-large" })</p>
+  }
+  <p>@Html.ActionLink("Home", "Index", "Home", null, new { @class = "btn btn-primary btn-large" })</p>
+</div>
