--- a/Sweetshop/Views/Treats/AddFlavor.cshtml
+++ b/Sweetshop/Views/Treats/AddFlavor.cshtml
@@ -4,18 +4,20 @@
 
 @model SweetShop.Models.Treat
 
-<h2>Add a flavor</h2>
+<div class="viewContainer">
+  <h2>Add a flavor</h2>
 
-<h4>Add a flavor to this treat: @Html.DisplayFor(model => model.Name)</h4>
+  <h4>Add a flavor to this treat: @Html.DisplayFor(model => model.Name)</h4>
 
-@using (Html.BeginForm())
-{
-  @Html.HiddenFor(model => model.TreatId)
+  @using (Html.BeginForm())
+  {
+    @Html.HiddenFor(model => model.TreatId)
 
-  @Html.Label("Select flavor")
-  @Html.DropDownList("FlavorId")
+    <span class="form-control">@Html.Label("Select flavor")
+    @Html.DropDownList("FlavorId")</span>
 
-  <input type="submit" value="Save" />
-}
+    <input type="submit" value="Save" />
+  }
 
-<p>@Html.ActionLink("Back to list", "Index")</p>
+  <p>@Html.ActionLink("Back to list", "Index", null, null, new { @class = "btn btn-primary btn-large" })</p>
+</div>
