--- a/Sweetshop/Views/Flavors/Delete.cshtml
+++ b/Sweetshop/Views/Flavors/Delete.cshtml
@@ -4,11 +4,13 @@
 
 @model SweetShop.Models.Flavor
 
-<h2>Confirm delete of this flavor?</h2>
+<div class="viewContainer">
+  <h2>Confirm delete of this flavor?</h2>
 
-@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)
-@using (Html.BeginForm())
-{
-  <input type="submit" value="Delete" />
-}
-@Html.ActionLink("Back to List", "Index")
+  <h4>@Html.DisplayFor(model => model.Name)</h4>
+  @using (Html.BeginForm())
+  {
+    <input type="submit" value="Delete" />
+  }
+  @Html.ActionLink("Back to List", "Index", null, null, new { @class = "btn btn-primary btn-large" })
+</div>
