--- a/Sweetshop/Views/Flavors/Details.cshtml
+++ b/Sweetshop/Views/Flavors/Details.cshtml
@@ -4,30 +4,32 @@
 
 @model SweetShop.Models.Flavor;
 
-<h2>Flavor Details</h2>
-<hr />
-<h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)</h3>
+<div class="viewContainer">
+  <h2>Flavor Details</h2>
+  <hr />
+  <h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)</h3>
 
-@if(@Model.JoinEntities.Count == 0)
-{
-  <p>This flavor is not in any treats!</p>
-}
-else
-{
-  <h4>Treats using this flavor:</h4>
-  <ul>
-  @foreach(var join in Model.JoinEntities)
+  @if(@Model.JoinEntities.Count == 0)
   {
-    <li>@join.Treat.Name</li>
+    <p>This flavor is not in any treats!</p>
   }
-  </ul>
-}
-
-@if (User.Identity.IsAuthenticated)
+  else
+  {
+    <h4>Treats using this flavor:</h4>
+    <ul>
+    @foreach(var join in Model.JoinEntities)
     {
-      <p>@Html.ActionLink("Add a Treat", "AddTreat", new { id = Model.FlavorId }, new { @class = "btn btn-primary btn-large"})</p>
+      <li>@join.Treat.Name</li>
     }
+    </ul>
+  }
 
-<p>@Html.ActionLink("Back to flavors", "Index")</p>
-<p>@Html.ActionLink("Edit Flavor", "Edit", new { id = Model.FlavorId })</p>
-<p>@Html.ActionLink("Delete Flavor", "Delete", new { id = Model.FlavorId })</p>
+  @if (User.Identity.IsAuthenticated)
+      {
+        <p>@Html.ActionLink("Add a Treat", "AddTreat", new { id = Model.FlavorId }, new { @class = "btn btn-primary btn-large"})</p>
+      }
+
+  <p>@Html.ActionLink("Back to flavors", "Index", null, null, new { @class = "btn btn-primary btn-large" })</p>
+  <p>@Html.ActionLink("Edit Flavor", "Edit", new { id = Model.FlavorId }, new { @class = "btn btn-primary btn-large" })</p>
+  <p>@Html.ActionLink("Delete Flavor", "Delete", new { id = Model.FlavorId }, new { @class = "btn btn-primary btn-large" })</p>
+</div>
